[package]
name = "stream-lines"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "lined oriented rustlang Streams"
documentation = "https://softprops.github.io/stream-lines"
homepage = "https://github.com/softprops/stream-lines"
repository = "https://github.com/softprops/stream-lines"
keywords = ["futures", "streams", "lines"]
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "softprops/stream-lines" }
coveralls = { repository = "softprops/stream-lines" }

[dev_dependencies]
tokio-core = "0.1"

[dependencies]
futures = "0.1"