[package]
name = "stream-lines"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "lined oriented rustlang Streams"
documentation = "https://softprops.github.io/stream-lines"
homepage = "https://github.com/softprops/stream-lines"
repository = "https://github.com/softprops/stream-lines"
keywords = ["futures", "streams", "lines"]
license = "MIT"
readme = "README.md"
categories = [
  "asynchronous"
]

[badges]
travis-ci = { repository = "softprops/stream-lines" }
coveralls = { repository = "softprops/stream-lines" }

[dev-dependencies]
failure = "0.1"
tokio = "0.1"
hyper = "0.12"
hyper-tls = "0.3"

[dependencies]
futures = "0.1"
